--- a/addons/godot-framework/plugin.cfg
+++ b/addons/godot-framework/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Godot-Framework"
-description="适用于Godot4 GDScript的开发框架。"
+description="A development framework applicable to Godot 4 GDScript."
 author="ky2312"
 version="2.0"
 script="godot-framework-plugin.gd"
