--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,7 @@
    "debug_collisions": false,
    "debug_paths": false,
    "debug_navigation": false,
-   "additional_options": "",
-   "port": 6007,
-   "debugServer": 6006
+   "additional_options": ""
   }
  ]
 }
